--- a/.build/build-flow.config.json
+++ b/.build/build-flow.config.json
@@ -3,7 +3,7 @@
   "links": [],
   "publish": true
 }, {
-  "name": "au2-code-mirro",
+  "name": "au2-code-mirror",
   "links": [],
   "publish": true
 }, {
