--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
   },
   "private": "true",
   "publishConfig": {
-    "registry":"https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com"
   },
   "scripts": {
     "clean": "node ./.build/build-flow.js clean",
@@ -99,8 +99,8 @@
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
     "codecov": "^3.8.3",
+    "http-server": "^14.0.0",
     "nyc": "^15.1.0",
-    "rimraf": "^3.0.2",
-    "http-server": "^14.0.0"
+    "rimraf": "^3.0.2"
   }
 }
