--- a/packages/au2-code-mirror-5/package.json
+++ b/packages/au2-code-mirror-5/package.json
@@ -58,11 +58,11 @@
     "lint": "npm run lint:js && npm run lint:html && npm run lint:css",
     "pretest": "npm run lint",
     "start": "webpack serve",
-    "tsc": "echo nothing",
     "build": "rimraf dist && webpack --env production",
     "analyze": "rimraf dist && webpack --env production --analyze",
     "test": "jest",
-    "test:node": "jest",
+    "tsc": "echo nothing",
+    "test-node": "npm run test",
     "prepare": "npm run build"
   },
   "jest": {
