chore(build): simplify

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rql",
+  "name": "au2",
   "version": "0.1.0",
-  "description": "RQL monorepo",
+  "description": "Aurelia 2 Plugins / Tools monorepo",
   "main": "index.js",
   "author": "Alexandre Genet",
   "license": "UNLICENSED",
@@ -97,10 +97,39 @@
     "cover": "yarn run cover:clean && yarn run cover:merge && yarn run cover:report"
   },
   "devDependencies": {
+    "@aurelia/ts-jest": "latest",
+    "@aurelia/webpack-loader": "latest",
     "@commitlint/cli": "^15.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "autoprefixer": "^10.4.0",
     "codecov": "^3.8.3",
+    "css-loader": "^6.5.1",
+    "dotenv-webpack": "^7.0.3",
+    "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "htmlhint": "^0.16.2",
     "http-server": "^14.0.0",
+    "jest": "^27.3.1",
+    "jest-transform-stub": "^2.0.0",
+    "json": "^11.0.0",
     "nyc": "^15.1.0",
-    "rimraf": "^3.0.2"
+    "postcss": "^8.3.11",
+    "postcss-loader": "^6.2.0",
+    "prettier": "^2.5.1",
+    "rimraf": "^3.0.2",
+    "sass": "^1.43.4",
+    "sass-lint": "^1.13.1",
+    "sass-loader": "^12.3.0",
+    "sass-to-string": "^1.6.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.6",
+    "webpack": "^5.64.2",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.5.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
