--- a/packages/au2-code-mirror/package.json
+++ b/packages/au2-code-mirror/package.json
@@ -17,50 +17,21 @@
   },
   "devDependencies": {
     "@aurelia/testing": "latest",
-    "@aurelia/ts-jest": "latest",
-    "@aurelia/webpack-loader": "latest",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
     "aurelia": "latest",
-    "autoprefixer": "^10.4.0",
-    "css-loader": "^6.5.1",
-    "dotenv-webpack": "^7.0.3",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "html-webpack-plugin": "^5.5.0",
-    "htmlhint": "^0.16.2",
-    "jest": "^27.3.1",
-    "jest-transform-stub": "^2.0.0",
-    "postcss": "^8.3.11",
-    "postcss-loader": "^6.2.0",
-    "prettier": "^2.5.1",
-    "rimraf": "^3.0.2",
-    "sass": "^1.43.4",
-    "sass-lint": "^1.13.1",
-    "sass-loader": "^12.3.0",
-    "sass-to-string": "^1.6.0",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.2",
-    "webpack": "^5.64.2",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0",
-    "webpack-node-externals": "^3.0.0"
+    "typescript": "^4.5.2"
   },
   "scripts": {
-    "lint:js": "eslint src test --ext .js,.ts",
-    "lint:css": "sass-lint -c .sass-lint.yml \"src/**/*.scss\"",
-    "lint:html": "htmlhint -c .htmlhintrc src",
+    "lint:js": "node ./../../node_modules/eslint/bin/eslint src test --ext .js,.ts",
+    "lint:css": "node ./../../node_modules/sass-lint/bin/sass-lint -c .sass-lint.yml \"src/**/*.scss\"",
+    "lint:html": "node ./../../node_modules/htmlhint/bin/htmlhint -c .htmlhintrc src",
     "lint": "npm run lint:js && npm run lint:html && npm run lint:css",
     "pretest": "npm run lint",
-    "start": "webpack serve",
-    "build": "rimraf dist && webpack --env production",
-    "analyze": "rimraf dist && webpack --env production --analyze",
-    "test": "jest",
+    "start": "node ./../../node_modules/webpack/bin/webpack serve",
+    "build": "node ./../../node_modules/rimraf/bin dist && node ./../../node_modules/webpack/bin/webpack --env production",
+    "analyze": "node ./../../node_modules/rimraf/bin dist && node ./../../node_modules/webpack/bin/webpack --env production --analyze",
+    "test": "node ./../../node_modules/jest/bin/jest",
     "tsc": "echo nothing",
     "test-node": "yarn run test",
     "prepare": "npm run build"
@@ -71,9 +42,9 @@
       "./../../.build/client/setup-after-env.js"
     ],
     "transform": {
-      "\\.(css|less|sass|scss|styl|jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "jest-transform-stub",
+      "\\.(css|less|sass|scss|styl|jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "./../../node_modules/jest-transform-stub",
       "\\.(ts|html)$": [
-        "@aurelia/ts-jest",
+        "./../../node_modules/@aurelia/ts-jest",
         {
           "defaultShadowOptions": {
             "mode": "open"
