feat(au2-base-flow): Project AU2 Base Flow

--- a/.build/build-flow.config.json
+++ b/.build/build-flow.config.json
@@ -1,4 +1,8 @@
 [{
+  "name": "au2-base-flow",
+  "links": [],
+  "publish": true
+}, {
   "name": "au2-code-mirror-5",
   "links": [],
   "publish": true
