--- a/package.json
+++ b/package.json
@@ -88,6 +88,10 @@
     "lint": "node ./.build/build-flow.js lint",
     "build": "node ./.build/build-flow.js build",
     "publish": "node ./.build/build-flow.js publish",
+    "upgrade": "yarn cache clean && node ./.build/build-flow.js upgrade",
+    "local": "node ./.build/build-flow.js local",
+    "local:publish": "node ./.build/build-flow.js localPublish",
+    "delete": "node ./.build/build-flow.js deleteNodeModules",
     "test": "node ./.build/build-flow.js test",
     "build-n-test": "yarn run cover:clean && yarn run lint && yarn run build && yarn run test && yarn run cover",
     "codecov": "./node_modules/.bin/codecov",
@@ -97,12 +101,13 @@
     "cover": "yarn run cover:clean && yarn run cover:merge && yarn run cover:report"
   },
   "devDependencies": {
-    "@aurelia/ts-jest": "latest",
-    "@aurelia/webpack-loader": "latest",
+    "@aurelia/ts-jest": "^2.0.0-alpha.24",
+    "@aurelia/webpack-loader": "^2.0.0-alpha.24",
     "@commitlint/cli": "^15.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "autoprefixer": "^10.4.0",
+    "bundle-declarations-webpack-plugin": "^2.2.2",
     "codecov": "^3.8.3",
     "css-loader": "^6.5.1",
     "dotenv-webpack": "^7.0.3",
@@ -115,6 +120,7 @@
     "jest": "^27.3.1",
     "jest-transform-stub": "^2.0.0",
     "json": "^11.0.0",
+    "mocha": "^9.2.1",
     "nyc": "^15.1.0",
     "postcss": "^8.3.11",
     "postcss-loader": "^6.2.0",
@@ -126,6 +132,7 @@
     "sass-to-string": "^1.6.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
+    "ts-mocha": "^9.0.2",
     "webpack": "^5.64.2",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
