feat(au2-base-component): base component

--- a/.build/build-flow.config.json
+++ b/.build/build-flow.config.json
@@ -2,6 +2,11 @@
   "name": "au2-base-flow",
   "links": [],
   "publish": true
+},
+{
+  "name": "au2-base-component",
+  "links": [],
+  "publish": true
 }, {
   "name": "au2-code-mirror-5",
   "links": [],
