--- a/packages/au2-base-component/package.json
+++ b/packages/au2-base-component/package.json
@@ -2,6 +2,7 @@
   "name": "@aegenet/au2-base-component",
   "description": "DRAFT - Aurelia 2 - Prism View/Editor plugin",
   "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "author": "Alexandre Genet",
   "files": [
     "dist"
@@ -13,6 +14,8 @@
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
+  },
+  "peerDependencies": {
   },
   "devDependencies": {
     "@aurelia/testing": "latest",
@@ -28,9 +31,10 @@
     "lint": "npm run lint:js && npm run lint:html && npm run lint:css",
     "pretest": "npm run lint",
     "start": "node ./../../node_modules/webpack/bin/webpack serve",
-    "build": "node ./../../node_modules/rimraf dist && node ./../../node_modules/webpack/bin/webpack --env production",
+    "build": "node ./../../node_modules/rimraf dist && node ./../../node_modules/webpack/bin/webpack --env production && yarn run build:dts",
     "analyze": "node ./../../node_modules/rimraf dist && node ./../../node_modules/webpack/bin/webpack --env production --analyze",
     "test": "node ./../../node_modules/jest/bin/jest --config ./jest.config.js",
+    "build:dts": "tsc src/index.ts --stripInternal --skipLibCheck --emitDecoratorMetadata --experimentalDecorators --moduleResolution node --declaration --emitDeclarationOnly --outDir ./dist",
     "tsc": "echo nothing",
     "test-node": "yarn run test"
   }
