--- a/packages/au2-base-component/tsconfig.json
+++ b/packages/au2-base-component/tsconfig.json
@@ -7,7 +7,8 @@
     "target": "ES2017",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "stripInternal": true,
   },
   "include": [
     "test",
