--- a/packages/au2-code-mirror/package.json
+++ b/packages/au2-code-mirror/package.json
@@ -17,10 +17,10 @@
     "@codemirror/lang-json": "^0.19.1"
   },
   "devDependencies": {
-    "@aurelia/testing": "latest",
+    "@aurelia/testing": "^2.0.0-alpha.33",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
-    "aurelia": "latest",
+    "aurelia": "^2.0.0-alpha.33",
     "typescript": "^4.5.2"
   },
   "scripts": {
