--- a/packages/au2-base-flow/tsconfig.json
+++ b/packages/au2-base-flow/tsconfig.json
@@ -1,25 +1,19 @@
 {
-  "compileOnSave": true,
   "compilerOptions": {
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "module": "esnext",
     "moduleResolution": "node",
     "skipLibCheck": true,
     "target": "ES2017",
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "importHelpers": true,
     "sourceMap": true,
     "newLine": "LF"
   },
-  "exclude": [
-    "./node_modules",
-    "./samples"
-  ],
   "include": [
     "test",
     "src"
-  ],
-  "atom": {
-    "rewriteTsconfig": false
-  }
+  ]
 }
