--- a/packages/au2-code-mirror/tsconfig.json
+++ b/packages/au2-code-mirror/tsconfig.json
@@ -2,12 +2,15 @@
   "compilerOptions": {
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "module": "esnext",
     "moduleResolution": "node",
     "skipLibCheck": true,
     "target": "ES2017",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "sourceMap": true
+    "importHelpers": true,
+    "sourceMap": true,
+    "newLine": "LF"
   },
   "include": [
     "test",
