--- a/packages/au2-base-flow/package.json
+++ b/packages/au2-base-flow/package.json
@@ -2,8 +2,8 @@
   "name": "@aegenet/au2-base-flow",
   "description": "Task flow utils based on Aurelia 2 kernel",
   "version": "999.0.0",
-  "main": "./dist/node/au2-base-flow.bundle.js",
-  "browser": "./dist/web/au2-base-flow.bundle.js",
+  "main": "./dist/node/au2-base-flow.bundle.mjs",
+  "browser": "./dist/web/au2-base-flow.bundle.mjs",
   "typings": "./dist/node/bundle.d.ts",
   "author": "Alexandre Genet",
   "license": "UNLICENSED",
