--- a/packages/au2-code-mirror/package.json
+++ b/packages/au2-code-mirror/package.json
@@ -19,14 +19,14 @@
   },
   "license": "UNLICENSED",
   "dependencies": {
-    "@codemirror/basic-setup": "^0.19.1",
-    "@codemirror/lang-json": "^0.19.1"
+    "codemirror": "^6.0.1",
+    "@codemirror/lang-json": "^6.0.0"
   },
   "devDependencies": {
-    "@aurelia/testing": "^2.0.0-alpha.35",
+    "@aurelia/testing": "^2.0.0-alpha.36",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
-    "aurelia": "^2.0.0-alpha.35",
+    "aurelia": "^2.0.0-alpha.36",
     "typescript": "^4.7.3"
   },
   "scripts": {
