--- a/packages/au2-base-component/package.json
+++ b/packages/au2-base-component/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@aegenet/belt-anti-bounce": "^999.1649280157577.0",
     "@aurelia/i18n": "^2.0.0-alpha.37",
+    "@aurelia/router": "^2.0.0-alpha.37",
     "@aurelia/testing": "^2.0.0-alpha.37",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
