--- a/packages/au2-base-component/package.json
+++ b/packages/au2-base-component/package.json
@@ -22,13 +22,13 @@
   "peerDependencies": {},
   "devDependencies": {
     "@aegenet/belt-anti-bounce": "^999.1649280157577.0",
-    "@aurelia/i18n": "^2.0.0-alpha.38",
-    "@aurelia/router": "^2.0.0-alpha.38",
-    "@aurelia/testing": "^2.0.0-alpha.38",
+    "@aurelia/i18n": "^2.0.0-alpha.39",
+    "@aurelia/router": "^2.0.0-alpha.39",
+    "@aurelia/testing": "^2.0.0-alpha.39",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
-    "aurelia": "^2.0.0-alpha.38",
-    "typescript": "^4.7.3"
+    "aurelia": "^2.0.0-alpha.39",
+    "typescript": "~4.7"
   },
   "scripts": {
     "lint:js": "node ./../../node_modules/eslint/bin/eslint src test --ext .js,.ts",
