--- a/packages/au2-code-mirror/package.json
+++ b/packages/au2-code-mirror/package.json
@@ -23,11 +23,11 @@
     "@codemirror/lang-json": "^6.0.0"
   },
   "devDependencies": {
-    "@aurelia/testing": "^2.0.0-alpha.39",
+    "@aurelia/testing": "^2.0.0-alpha.40",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
-    "aurelia": "^2.0.0-alpha.39",
-    "typescript": "^4.7.3"
+    "aurelia": "^2.0.0-alpha.40",
+    "typescript": "~4.7"
   },
   "scripts": {
     "lint:js": "node ./../../node_modules/eslint/bin/eslint src test --ext .js,.ts",
