--- a/packages/au2-base-component/package.json
+++ b/packages/au2-base-component/package.json
@@ -36,7 +36,7 @@
     "lint:html": "node ./../../node_modules/htmlhint/bin/htmlhint -c .htmlhintrc src",
     "lint": "npm run lint:js && npm run lint:html && npm run lint:css",
     "pretest": "npm run lint",
-    "start": "node ./../../node_modules/webpack/bin/webpack serve",
+    "start": "node ./../../node_modules/webpack/bin/webpack serve --config-name commonjs",
     "build": "node ./../../node_modules/rimraf dist && node ./../../node_modules/webpack/bin/webpack --env production && yarn run build:dts",
     "analyze": "node ./../../node_modules/rimraf dist && node ./../../node_modules/webpack/bin/webpack --env production --analyze",
     "test": "node ./../../node_modules/jest/bin/jest --config ./jest.config.cjs",
