--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "build": "node ./.build/build-flow.js build",
     "publish": "node ./.build/build-flow.js publish",
     "upgrade": "yarn cache clean && node ./.build/build-flow.js upgrade",
+    "upgradeLatest": "yarn cache clean && node ./.build/build-flow.js upgradeLatest",
     "local": "node ./.build/build-flow.js local",
     "local:publish": "node ./.build/build-flow.js localPublish",
     "delete": "node ./.build/build-flow.js deleteNodeModules",
@@ -101,41 +102,41 @@
     "cover": "yarn run cover:clean && yarn run cover:merge && yarn run cover:report"
   },
   "devDependencies": {
-    "@aurelia/ts-jest": "^2.0.0-alpha.41",
-    "@aurelia/webpack-loader": "^2.0.0-alpha.41",
-    "@commitlint/cli": "^15.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "autoprefixer": "^10.4.0",
-    "bundle-declarations-webpack-plugin": "^2.2.2",
+    "@aurelia/ts-jest": "^2.0.0-beta.1",
+    "@aurelia/webpack-loader": "^2.0.0-beta.1",
+    "@commitlint/cli": "^17.4.2",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "autoprefixer": "^10.4.13",
+    "bundle-declarations-webpack-plugin": "^4.0.1",
     "codecov": "^3.8.3",
-    "css-loader": "^6.5.1",
-    "dotenv-webpack": "^7.0.3",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.3.0",
+    "css-loader": "^6.7.3",
+    "dotenv-webpack": "^8.0.1",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
-    "htmlhint": "^0.16.2",
+    "htmlhint": "^1.1.4",
     "http-server": "^14.0.0",
-    "jest": "^27.3.1",
+    "jest": "^27",
     "jest-transform-stub": "^2.0.0",
     "json": "^11.0.0",
-    "mocha": "^9.2.1",
+    "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "postcss": "^8.3.11",
-    "postcss-loader": "^6.2.0",
-    "prettier": "^2.5.1",
-    "rimraf": "^3.0.2",
-    "sass": "^1.43.4",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.0.2",
+    "prettier": "^2.8.3",
+    "rimraf": "^4.1.0",
+    "sass": "^1.57.1",
     "sass-lint": "^1.13.1",
-    "sass-loader": "^12.3.0",
+    "sass-loader": "^13.2.0",
     "sass-to-string": "^1.6.0",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.6",
-    "ts-mocha": "^9.0.2",
-    "webpack": "^5.64.2",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.1",
+    "ts-loader": "^9.4.2",
+    "ts-mocha": "^10.0.0",
+    "webpack": "^5.75.0",
+    "webpack-bundle-analyzer": "^4.7.0",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.5.0",
     "webpack-node-externals": "^3.0.0"
   }
