--- a/packages/au2-prism/package.json
+++ b/packages/au2-prism/package.json
@@ -22,10 +22,10 @@
     "registry": "https://npm.pkg.github.com"
   },
   "devDependencies": {
-    "@aurelia/testing": "^2.0.0-alpha.41",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.10",
-    "aurelia": "^2.0.0-alpha.41",
+    "@aurelia/testing": "^2.0.0-beta.1",
+    "@types/jest": "^27",
+    "@types/node": "^18.11.18",
+    "aurelia": "^2.0.0-beta.1",
     "typescript": "~4.7"
   },
   "scripts": {
