--- a/packages/au2-prism/package.json
+++ b/packages/au2-prism/package.json
@@ -26,7 +26,7 @@
     "@types/jest": "^27",
     "@types/node": "^18.11.18",
     "aurelia": "^2.0.0-beta.4",
-    "typescript": "~4.7"
+    "typescript": "^5"
   },
   "scripts": {
     "lint:js": "node ./../../node_modules/eslint/bin/eslint src test --ext .js,.ts",
