--- a/packages/au2-base-component/package.json
+++ b/packages/au2-base-component/package.json
@@ -14,7 +14,7 @@
   ],
   "version": "999.0.0",
   "repository": "https://github.com/aegenet/au2/tree/master/packages/au2-base-component",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "dependencies": {},
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -22,12 +22,12 @@
   "peerDependencies": {},
   "devDependencies": {
     "@aegenet/belt-anti-bounce": "^1.0.2",
-    "@aurelia/i18n": "^2.0.0-beta.9",
-    "@aurelia/router": "^2.0.0-beta.9",
-    "@aurelia/testing": "^2.0.0-beta.9",
+    "@aurelia/i18n": "^2.0.0-beta.10",
+    "@aurelia/router": "^2.0.0-beta.10",
+    "@aurelia/testing": "^2.0.0-beta.10",
     "@types/jest": "^27",
     "@types/node": "^18.11.18",
-    "aurelia": "^2.0.0-beta.9",
+    "aurelia": "^2.0.0-beta.10",
     "typescript": "^5"
   },
   "scripts": {
