--- a/packages/au2-base-flow/package.json
+++ b/packages/au2-base-flow/package.json
@@ -10,7 +10,7 @@
   },
   "typings": "./dist/node/bundle.d.ts",
   "author": "Alexandre Genet",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "files": [
     "dist"
   ],
@@ -20,10 +20,10 @@
   "repository": "https://github.com/aegenet/au2/tree/master/packages/au2-base-flow",
   "dependencies": {},
   "peerDependencies": {
-    "@aurelia/kernel": "^2.0.0-beta.9"
+    "@aurelia/kernel": "^2.0.0-beta.10"
   },
   "devDependencies": {
-    "@aurelia/kernel": "^2.0.0-beta.9",
+    "@aurelia/kernel": "^2.0.0-beta.10",
     "@types/jest": "^27",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.18"
