--- a/packages/au2-prism/package.json
+++ b/packages/au2-prism/package.json
@@ -14,7 +14,7 @@
   ],
   "version": "999.0.0",
   "repository": "https://github.com/aegenet/au2/tree/master/packages/au2-prism",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "dependencies": {
     "prismjs": "^1.29.0"
   },
@@ -22,10 +22,10 @@
     "registry": "https://npm.pkg.github.com"
   },
   "devDependencies": {
-    "@aurelia/testing": "^2.0.0-beta.9",
+    "@aurelia/testing": "^2.0.0-beta.10",
     "@types/jest": "^27",
     "@types/node": "^18.11.18",
-    "aurelia": "^2.0.0-beta.9",
+    "aurelia": "^2.0.0-beta.10",
     "typescript": "^5"
   },
   "scripts": {
