--- a/package.json
+++ b/package.json
@@ -98,46 +98,46 @@
     "codecov": "./node_modules/.bin/codecov",
     "cover:clean": "rimraf ./coverage/ && rimraf ./.nyc_output/",
     "cover:merge": "node ./.build/coverage.merge.js",
-    "cover:report": "nyc report -t ./.nyc_output/ --reporter html --reporter text-summary",
+    "cover:report": "c8 report -t ./.nyc_output/ --reporter html --reporter text-summary",
     "cover": "yarn run cover:clean && yarn run cover:merge && yarn run cover:report"
   },
   "devDependencies": {
-    "@aurelia/ts-jest": "^2.0.0-beta.10",
-    "@aurelia/webpack-loader": "^2.0.0-beta.10",
-    "@commitlint/cli": "^17.4.2",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "autoprefixer": "^10.4.13",
-    "bundle-declarations-webpack-plugin": "^4.0.1",
-    "codecov": "^3.8.3",
-    "css-loader": "^6.7.3",
+    "@aurelia/ts-jest": "^2.0.0-beta.13",
+    "@aurelia/webpack-loader": "^2.0.0-beta.13",
+    "@commitlint/cli": "^19.2.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "autoprefixer": "^10.4.18",
+    "bundle-declarations-webpack-plugin": "^5.1.1",
+    "c8": "^9.1.0",
+    "css-loader": "^6.10.0",
     "dotenv-webpack": "^8.0.1",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "html-webpack-plugin": "^5.5.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "html-webpack-plugin": "^5.6.0",
     "htmlhint": "^1.1.4",
-    "http-server": "^14.0.0",
-    "jest": "^27",
+    "http-server": "^14.1.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
     "json": "^11.0.0",
-    "mocha": "^10.2.0",
-    "nyc": "^15.1.0",
-    "postcss": "^8.4.21",
-    "postcss-loader": "^7.0.2",
-    "prettier": "^2.8.3",
-    "rimraf": "^5.0.1",
-    "sass": "^1.57.1",
+    "mocha": "^10.3.0",
+    "postcss": "^8.4.35",
+    "postcss-loader": "^8.1.1",
+    "prettier": "^3.2.5",
+    "rimraf": "^5.0.5",
+    "sass": "^1.72.0",
     "sass-lint": "^1.13.1",
-    "sass-loader": "^13.2.0",
-    "sass-to-string": "^1.6.0",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.4.2",
+    "sass-loader": "^14.1.1",
+    "sass-to-string": "^1.6.3",
+    "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.1",
     "ts-mocha": "^10.0.0",
-    "webpack": "^5.75.0",
-    "webpack-bundle-analyzer": "^4.7.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.5.0",
+    "webpack": "^5.90.3",
+    "webpack-bundle-analyzer": "^4.10.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.3",
     "webpack-node-externals": "^3.0.0"
   }
 }
