--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-package-lock=false
+//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
 shamefully-hoist=true
 registry=https://registry.npmjs.org/
-@aegenet:registry=https://npm.pkg.github.com
+_always-auth= true
