--- a/packages/au2-base-component/package.json
+++ b/packages/au2-base-component/package.json
@@ -12,7 +12,7 @@
   "files": [
     "dist"
   ],
-  "version": "999.0.0",
+  "version": "0.0.0-dev",
   "repository": "https://github.com/aegenet/au2/tree/master/packages/au2-base-component",
   "license": "MIT",
   "dependencies": {},
@@ -21,8 +21,8 @@
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@aegenet/belt-anti-bounce": "^1.4.2",
-    "@aegenet/belt-array-to-obj": "^1.4.2",
+    "@aegenet/belt-anti-bounce": "^1.5.0",
+    "@aegenet/belt-array-to-obj": "^1.5.0",
     "@aurelia/i18n": "^2.0.0-beta.13",
     "@aurelia/router": "^2.0.0-beta.13",
     "@aurelia/testing": "^2.0.0-beta.13",
