--- a/packages/au2-prism/package.json
+++ b/packages/au2-prism/package.json
@@ -12,7 +12,7 @@
   "files": [
     "dist"
   ],
-  "version": "999.0.0",
+  "version": "0.0.0-dev",
   "repository": "https://github.com/aegenet/au2/tree/master/packages/au2-prism",
   "license": "MIT",
   "dependencies": {
