chore(clean-pkg): token name

--- a/.github/workflows/clean-pkg.yml
+++ b/.github/workflows/clean-pkg.yml
@@ -25,5 +25,5 @@ jobs:
           package-type: 'npm'
           min-versions-to-keep: 5
           include-versions: '^999\.|\-dev$'
-          token: ${{ secrets.NPM_AUTH_TOKEN }}
+          token: ${{ secrets.NPM_DELETE_TOKEN }}
           sleep-interval: 10000
