--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "description": "Aurelia 2 Plugins / Tools monorepo",
   "main": "index.mjs",
+  "keywords": [
+    "aurelia",
+    "aurelia2",
+    "plugin"
+  ],
   "author": "Alexandre Genet",
   "license": "MIT",
   "nyc": {
