--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,12 @@ jobs:
 
       - name: Lint
         run: npm run lint
+
+      - name: Set version
+        run: npm run version
       - name: Build
         run: npm run build
-      - name: Build
+      - name: Tests
         run: npm run test:coverage
 
       - name: Publish dev packages
@@ -48,6 +51,6 @@ jobs:
         run: npm run publish
 
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v4.5.0
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
