chore(release): fix npm publish

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,16 +42,20 @@ jobs:
       - name: Publish packages GitHub
         env:
           CI: true
+          YAWT_NPM_PUBLIC_PUBLISH: 'false'
+          YAWT_NPM_NAMESPACE: '@aegenet'
+          YAWT_NPM_PUSH_REGISTRY: https://npm.pkg.github.com/
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-        run: yarn run publish
+        run: npm run publish
 
       - name: Publish packages npm
         env:
           CI: true
-          NPM_PUBLISH_PUBLIC: '1'
-          NPM_PUSH_REGISTRY: https://registry.npmjs.org/
+          YAWT_NPM_PUBLIC_PUBLISH: 'true'
+          YAWT_NPM_NAMESPACE: '@aegenet'
+          YAWT_NPM_PUSH_REGISTRY: https://registry.npmjs.org/
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
-        run: yarn run publish
+        run: npm run publish
 
       # - name: Upload coverage reports to Codecov
       #   uses: codecov/codecov-action@v4
